--- a/client/static/style.css
+++ b/client/static/style.css
@@ -2,6 +2,7 @@
     background-color: #4EAAE3;
     background-image: linear-gradient(315deg, #a7f58c 0%, #4EAAE3 100%);
     color:white;
+    overflow: scroll;
 }
 
 .navbar-font{
